# sky-sight

./: .env.dev-sample  .env.docker.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: prod.yml
backend/: .env.dev-sample  .gitignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/project/: settings.py  urls.py  wsgi.py
backend/project/station/: apps.py  config_file.py  models.py  urls.py  utils.py  views.py
backend/project/station/dados/: VilaMariana03-01-23-03-01-24.csv  VilaMariana04-01-24-15-05-2024.csv
backend/project/station/management/commands/: historical_data.py  openweather_data.py
backend/project/station/migrations/: 0001_initial.py
backend/project/station/modelos/: modelo_regressao_linear.sav
jupyter/: Modelo.ipynb
jupyter/dados/: VilaMariana03-01-23-06-04-2023.csv
mobile/: pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/Screens/: fiveDayForecastDetailScreen.dart  homeScreen.dart  locationError.dart  requestError.dart  sevenDayForecastDetailScreen.dart
mobile/lib/helper/: utils.dart
mobile/lib/models/: additionalWeatherData.dart  dailyWeather.dart  hourlyWeather.dart
mobile/lib/provider/: weatherProvider.dart
mobile/lib/src/: sky_sight_app.dart
mobile/lib/widgets/: WeatherInfoHeader.dart  fiveDayForecast.dart  mainWeatherDetail.dart  mainWeatherInfo.dart  (+3 more)
mobile/test/: widget_test.dart
nginx/: nginx.conf
project/: asgi.py
(+3 files in other folders)
